[RED] Adding and modifying tests for topup service